--- a/Saporo/pt-BR.lproj/Localizable.strings
+++ b/Saporo/pt-BR.lproj/Localizable.strings
@@ -6,14 +6,14 @@
   
 */
 //Menu
-"Recipes" = "Receitas";
-"Favorites" = "Favoritos";
-"Search" = "Pesquisar";
-"Settings" = "Configurações";
-
-//Aba Pesquisar
-"Search a recipe" = "Pesquise uma receita";
-"Italian" = "Italiano";
-"Japanese" = "Japonês";
-"French" = "Francês";
+//"Recipes" = "Receitas";
+//"Favorites" = "Favoritos";
+//"Search" = "Pesquisar";
+//"Settings" = "Configurações";
+//
+////Aba Pesquisar
+//"Search a recipe" = "Pesquise uma receita";
+//"Italian" = "Italiano";
+//"Japanese" = "Japonês";
+//"French" = "Francês";
 
